[tool.poetry]
name = "hashNeRF"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgemf@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_2023_graswad"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
typer = "^0.9.0"
tqdm = "^4.65.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
imageio = "^2.9.0"
opencv-python-headless = "^4.8.0.74"
pyvista = "^0.41.0"
tensorboard = "^2.13.0"
tensorboard-plugin-profile = "^2.13.0"
torch_tb_profiler = "^0.2.0"

#kornia = "^0.6.1"
#configargparse = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
